
####   Don't forget to change the version number in configure.ac!   ####

26 Dec 2004 Initialize guestsregs->ints_state in SIE - Greg Smith
25 Dev 2004 Allow use of 'symbols' for panel commands - Ivan Warren
24 Dec 2004 sie perf update attempt (again).. Merry Xmas - Ivan Warren
23 Dec 2004 Fix SCSI mountreq/unmountreq tests in ReqAutoMount - Fish
22 Dec 2004 Fix to cc in CUUTF and CUTFU instruction - Greg
22 Dec 2004 Fix minor benign glitch in breakpoint cmd - Fish
22 Dec 2004 Fix to TROT instruction in esame.c - Fish
22 Dec 2004 Make 'notimer' the pttrace default as per comments - Fish
22 Dec 2004 Mark Drummond channel.c tape read backwards fixes - Fish
19 Dec 2004 dasdinit VOL1 and linux vtoc tweaks - Greg Smith
16 Dec 2004 Fix BRXHG and BRXLG to branch backwards too - Greg Smith
14 Dec 2004 Ensure dyncrypt is built *AFTER* core - Ivan Warren
14 Dec 2004 cckd garbage collector fix - Greg Smith
14 Dec 2004 Bug in utf xlations, cc2 was never reached - Bernard van der Helm
10 Dec 2004 ppc assembler assists for cmpxchg1, cmpxchg4 - Greg Smith
08 Dec 2004 dasdinit -linux option support - Greg Smith
06 Dec 2004 Keep crx in sync with INST_SPACE - Jan Jaeger
04 Dec 2004 Make chkdsk faster if disk is readonly - Greg Smith
03 Dec 2004 Optimize clearing memory - Greg Smith
02 Dec 2004 Fix ref & change recording in relation to SSKE/RRBE - Jan Jaeger
02 Dec 2004 Fix SIE guest timer interrupt handling - Jan Jaeger
30 Nov 2004 Use SLEEP() to ensure sleep for `n' seconds - Greg Smith
30 Nov 2004 Get mainstor after device initialization - Greg Smith
29 Nov 2004 Fix reference and change recording in dat-off mode - Jan Jaeger
28 Nov 2004 Binary Floating Point feature completed - Roger Bowler
28 Nov 2004 TBEDR,TBDR instructions - Roger Bowler
26 Nov 2004 Improve stack access - Jan Jaeger
25 Nov 2004 Fix MCK in ECPS:VM - Ivan Warren
23 Nov 2004 Improve access register translation - Jan Jaeger
22 Nov 2004 Fix incorrect protection/access in ar mode - Jan Jaeger