@@ -1368,19 +1368,15 @@ CKDDEV         *ckdtab;                 /* -> CKD table entry        */
                     convert_to_ebcdic (pos, keylen, "VOL1");
                     pos += keylen;
 
-                    convert_to_ebcdic (pos, 4, "VOL1");
-                    convert_to_ebcdic (pos+4, 6, volser);
-                    convert_to_ebcdic (pos+37, 14, "HERCULES");
-                    /* vtoc cchhr will be 0000 0001 01 rather than all zeroes */
-                    pos[14] = 1;
-                    pos[15] = 1;
-                    /* For linux disk, vtoc is at CCHHR 0000 0001 01 */
-                    if (nullfmt == CKDDASD_NULLTRK_FMT2)
-                    {
-                        store_hw(pos+11, 0);
-                        store_hw(pos+13, 1);
-                        pos[15] = 1;
-                    }
+                    convert_to_ebcdic (pos, 4, "VOL1");           //VOL1
+                    convert_to_ebcdic (pos+4, 6, volser);         //volser
+                    pos[10] = 0xc0;                               //security
+                    store_hw(pos+11,0);                           //vtoc CC
+                    store_hw(pos+13,1);                           //vtoc HH
+                    pos[15] = 0x01;                               //vtoc R
+                    memset(pos+16, 0x40, 21);                     //reserved
+                    convert_to_ebcdic (pos+37, 14, "HERCULES");   //ownerid
+                    memset(pos+51, 0x40, 29);                     //reserved
                     pos += vol1len;
 
                     /* 9 4096 data blocks for linux volume */
